gitops/infrastructure/storage/longhorn/network-policy-v1-iscsi.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-instance-manager-v1-iscsi
  namespace: longhorn-system
  annotations:
    argocd.argoproj.io/sync-wave: "-9"
spec:
  podSelector:
    matchLabels:
      longhorn.io/component: instance-manager
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 3260
